# job_optimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_columns.py  debug_connection.py  docker-compose.yml  pyproject.toml  requirements.txt
docker/: docker-compose.yml  init.sql
src/api/: main.py  models.py
src/common/: testfile.py  text.py
src/data/: check_supabase.py  extract_descriptions.py  extract_facts.py  loader.py  loader_test.py  merge_dataset.py  prepare.py  process_metrics.py
src/demo/: app.py
src/job_optimizer_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag/: advisor.py  llm.py  retriever.py
tests/: test_api_mock.py  test_cleaning.py  test_combinations.py  test_scoring.py
