[tool.poetry]
name = "job-optimizer-mvp"
version = "0.1.0"
description = "AI сервис для оптимизации вакансий"
authors = ["Admin"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# --- Backend API ---
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"

# --- Frontend ---
streamlit = "^1.31.0"
requests = "^2.31.0"

# --- Data Processing ---
pandas = "^2.2.0"
numpy = "^1.26.0"
pyarrow = "^15.0.0"  # Обязательно для чтения/записи .parquet
tqdm = "^4.66.0"     # Прогресс-бар

# --- AI & ML ---
scikit-learn = "^1.4.0"          # Для поиска соседей (KNN)
sentence-transformers = "^2.3.1" # Для векторизации текста
huggingface-hub = "^0.20.0"      # Для общения с LLM (Qwen)

# --- Utils ---
python-dotenv = "^1.0.0"         # Чтение .env файла

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
