[tool.poetry]
name = "job-optimizer-mvp"
version = "0.1.0"
description = "AI сервис для оптимизации вакансий"
authors = ["Admin"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "*"
uvicorn = "*"
pydantic = "*"

streamlit = "*"
requests = "*"

pandas = "*"
numpy = "*"
pyarrow = "*"
tqdm = "*"

scikit-learn = "*"
sentence-transformers = "*"
huggingface-hub = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
